--- a/Faker/Faker.csproj
+++ b/Faker/Faker.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Faker.cs" />
     <Compile Include="Generators.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestDemo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
